--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@ body {
   font-family: 'Poppins', sans-serif !important;
 }
 
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+}
+
 #hero-banner {
   position: relative;
   background-color: black;
