--- a/css/style.css
+++ b/css/style.css
@@ -577,3 +577,10 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance:textfield; /* Firefox */
 }
+
+.rewards-steps-icon {
+  text-align: center;
+  vertical-align: middle;
+  line-height: 144px;
+  font-size: 120px;
+}
